--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <div id="footer-wrapper">
         <footer id="page-footer" class="container_12">
-            <p>JavaBin &copy; 2012-{{'now' | date: '%Y'}}</p>
+            <p>JavaBin &copy; {{'now' | date: '%Y'}}</p>
         </footer>
     </div>
     
