--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,19 +1,20 @@
 ---
 layout: default
 ---
-
-<div id="content" class="container_12 clearfix push-down">
-<div class="grid_12">
-
 <article class="post">
-    <div class="side-date">
-        {{ page.date | date: "%B"}}
-        {{ page.date | date: "%d"}},
-        {{ page.date | date: "%Y"}}
+	<!--<div class="publisheddate">
+		{{ page.date | date: "%B"}}
+	    {{ page.date | date: "%d"}},
+	    {{ page.date | date: "%Y"}}
+	</div>-->
+	<h1 class="post-title">
+		{{ page.title }}
+	</h1>	
+	<div class="author">
+		{{ page.author }}
 	</div>
-	<h1 class="post-title">{{ page.title }}</h1>
-    {{ content }}
-</article>
 
-</div>
-</div>
+	<div class="content">
+    	{{ content }}
+    </div>
+</article>
