--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,17 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">
-            <img src="/img/logo.png" />
-        </div>
+      <div class="logo">
+          <img src="/img/logo.png" />
+      </div>
     </div>
     <div id="page">
-        <div class="boxed">
-            {{ content }}
-        </div>
+      <div class="boxed">
+          {{ content }}
+      </div>
+    </div>
+    <div class="footer">
+      <p>By <a href="http://java.no">javaBin</a>.</p>
     </div>
 
 </body>
