--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="/img/logo.png" />
+            <a href="/"><img src="/img/logo.png" /></a>
         </div>
     </div>
     <div id="page">
