--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
   <title>{{ page.title }} {% if page.title %}| {% endif %} JavaZone Blog</title>
   <meta name="description" content="Javazone!">
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="/css/clearfix.css" />
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
